--- a/src/scss/office.scss
+++ b/src/scss/office.scss
@@ -10,7 +10,7 @@
     padding: 24px;
     border-radius: 12px;
     // background-color: #f8f8f8;
-    border: 1px solid #e3e3e3;
+    box-shadow: 0 0 5px #04021821;
     box-sizing: border-box;
   }
 }
@@ -160,7 +160,7 @@
     padding: 24px;
     border-radius: 12px;
     // background-color: #f8f8f8;
-    border: 1px solid #e3e3e3;
+    box-shadow: 0 0 5px #04021821;
     box-sizing: border-box;
   }
 }
