--- a/src/scss/orders.scss
+++ b/src/scss/orders.scss
@@ -4,7 +4,7 @@
 }
 
 .user-order {
-  border: 1px solid #e0e0e0;
+  box-shadow: 0 0 5px #04021821;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -59,7 +59,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 12px;
-  border-top: 1px solid #e0e0e0;
+  border-top: 1px solid #e3e3e3;
 
   @include --max-md {
     padding: 12px;
@@ -77,7 +77,7 @@
   background: transparent;
   border: none;
   padding: 16px 16px;
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid #e3e3e3;
   border-radius: 0 0 0 12px;
   cursor: pointer;
 
@@ -88,7 +88,7 @@
   }
 
   &:not(:disabled):hover {
-    background: #f3f3f3;
+    background: #e3e3e3;
   }
 
   @include --max-md {
