--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -2,6 +2,11 @@
   display: flex;
 }
 
+.msCart__nodata {
+  font-size: 18px;
+  text-align: center;
+}
+
 .cart-auth {
   background: #f7fbff;
   border-radius: 12px;
