--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   width: 100%;
   box-sizing: border-box;
+  min-width: 0;
 
   @include --max-xl {
     padding: 6px;
@@ -239,6 +240,8 @@
 .product-card__content {
   margin-top: 12px;
   flex-grow: 1;
+  width: 100%;
+  overflow: hidden;
   @include --max-xl {
     margin-top: 8px;
   }
