--- a/src/scss/favorites.scss
+++ b/src/scss/favorites.scss
@@ -7,6 +7,8 @@
   align-items: center;
   justify-content: space-between;
   margin: 12px 0 32px;
+  flex-wrap: wrap;
+  gap: 12px;
 }
 
 .favorites-page__clear {
