--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -848,6 +848,7 @@ body {
   font-size: 18px;
   width: 40px;
   height: 50%;
+  padding: 0;
   border: none;
   cursor: pointer;
   border-left: 1px solid #e3e3e3;
