--- a/src/scss/floating-nav.scss
+++ b/src/scss/floating-nav.scss
@@ -61,7 +61,7 @@
     color: rgb(0, 103, 128);
     text-decoration: none;
     &:hover {
-      color: #0014ff;
+      color: #f28316;
     }
   }
   .floating-nav__close {
@@ -151,7 +151,7 @@
     color: rgb(0, 103, 128);
     text-decoration: none;
     &:hover {
-      color: #0014ff;
+      color: #f28316;
     }
   }
 }
