--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -73,6 +73,10 @@
     width: calc(100% + 20px);
     height: calc(100% + 20px);
   }
+  .product-card:hover .product-card__availability {
+    left: -10px;
+    top: -10px;
+  }
 }
 
 .product-card__form {
@@ -158,10 +162,6 @@
     height: 0;
     border-top: 82px solid #e65100;
     border-right: 69px solid transparent;
-  }
-  .product-card:hover & {
-    left: -10px;
-    top: -10px;
   }
 }
 
