--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -132,6 +132,9 @@
   line-height: 1;
   text-transform: uppercase;
   color: #ffffff;
+  a {
+    color: inherit;
+  }
   @include --max-md {
     font-size: 16px;
   }
@@ -602,6 +605,9 @@
   font-size: 16px;
   line-height: 30px;
   color: #909090;
+  a {
+    color: inherit;
+  }
   @include --max-3xl {
     font-size: 14px;
     line-height: 24px;
