--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -343,6 +343,7 @@
   cursor: pointer;
   font-size: 16px;
   white-space: nowrap;
+  font-weight: 400;
   [data-product-form][data-product-form-status='added'] & {
     display: none;
   }
@@ -396,6 +397,7 @@
   cursor: pointer;
   font-size: 16px;
   white-space: nowrap;
+  font-weight: 400;
   [data-product-form]:not([data-product-form-status='added']) & {
     display: none;
   }
