--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -328,7 +328,7 @@
 }
 
 .button-addtocart {
-  background: #efde00;
+  background: #ffed00;
   color: #383838;
   display: flex;
   align-items: center;
@@ -570,7 +570,7 @@
   }
   &:hover span {
     background: #fff;
-    border-color: #efde00;
+    border-color: #ffed00;
   }
 }
 
