--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -160,7 +160,7 @@
 }
 
 .cart-submit {
-  background: #efde00;
+  background: #ffed00;
   color: #383838;
   display: flex;
   align-items: center;
