--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -125,7 +125,7 @@
 
   span {
     padding: 0 4px;
-    background-color: #efde00;
+    background-color: #ffed00;
   }
 
   @include --max-md {
@@ -594,7 +594,7 @@
 }
 
 .ymaps-placeholder__button_yellow {
-  background-color: #efde00;
+  background-color: #ffed00;
   color: #000000;
 }
 
