--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -103,7 +103,7 @@ body {
     }
 
     .ui-widget-content.ui-menu-divider.mse2-ac-more {
-      background-color: #efde00;
+      background-color: #ffed00;
       color: #383838;
       text-decoration: underline;
       position: absolute;
@@ -137,7 +137,7 @@ body {
       height: 45px;
       width: 45px;
       z-index: 2;
-      background-color: #efde00;
+      background-color: #ffed00;
       border-color: rgba(191, 191, 191, 0.478);
       border-width: 0 1px 1px 1px;
       box-sizing: border-box;
