--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -761,12 +761,12 @@ body {
 }
 
 .rating-input {
-  float: right;
   width: 20px;
   height: 20px;
   padding: 0;
-  margin: 0 0 0 -20px;
   opacity: 0;
+  z-index: 1;
+  position: absolute;
 }
 
 .rating-inputs:hover .rating-star:hover,
@@ -779,13 +779,14 @@ body {
 .rating-inputs:hover .rating-star {
   margin-left: 4px;
   position: relative;
-  float: right;
   display: block;
   width: 20px;
   cursor: pointer;
   height: 20px;
+  flex-shrink: 0;
   background: url('../images/star-gray.svg') no-repeat 50% 50%;
   background-size: cover;
+  z-index: 2;
   &:last-child {
     margin-left: 0;
   }
@@ -1112,7 +1113,7 @@ body {
   &:hover {
     color: #000000;
     filter: drop-shadow(0 0 4px rgba(0, 29, 47, 0.5));
-    background-image: linear-gradient(37deg, #efce12 0%, #edd30d 100%);
+    background-color: #028caf;
   }
 
   @include --lg {
