--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -752,12 +752,10 @@ body {
 
 .rating-inputs {
   overflow: hidden;
-  display: inline-block;
+  display: flex;
   font-size: 0;
   position: relative;
-  vertical-align: middle;
   margin: 0;
-  min-width: 116px;
 }
 
 .rating-input {
@@ -773,6 +771,26 @@ body {
 .rating-inputs:hover .rating-star:hover ~ .rating-star,
 .rating-input:checked ~ .rating-star {
   background-image: url('../images/star.svg');
+}
+
+.rating-star [for='rating-input-1-5'] {
+  order: -1;
+}
+
+.rating-star [for='rating-input-1-4'] {
+  order: -2;
+}
+
+.rating-star [for='rating-input-1-3'] {
+  order: -3;
+}
+
+.rating-star [for='rating-input-1-2'] {
+  order: -4;
+}
+
+.rating-star [for='rating-input-1-1'] {
+  order: -5;
 }
 
 .rating-star,
