--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1041,6 +1041,7 @@
   margin-bottom: 24px;
   border-bottom: 1px solid #e4e4e4;
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   row-gap: 16px;
   column-gap: 16px;
