--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -501,7 +501,8 @@
   justify-content: center;
   line-height: 1;
   text-align: center;
-  width: 32px;
+  min-width: 32px;
+  padding: 0 2px;
   border-radius: 4px;
 
   &_new {
