--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -231,7 +231,7 @@
 .product-card__old-price {
   font-size: 16px;
   color: #9c9c9c;
-  text-decoration: line-through;
+  // text-decoration: line-through;
   line-height: 1;
   @include --max-xl {
     font-size: 10px;
