--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -706,7 +706,7 @@
   font-size: 16px;
   line-height: 1;
   color: #9c9c9c;
-  text-decoration: line-through;
+  // text-decoration: line-through;
 
   @include --max-lg {
     font-size: 12px;
