--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -610,3 +610,63 @@ textarea.order-textfield__control {
     line-height: 16px;
   }
 }
+
+.order-invoice {
+  display: flex;
+  gap: 12px;
+  flex-grow: 1;
+
+  @include --max-md {
+    gap: 4px;
+  }
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  75% {
+    content: "...";
+  }
+  100% {
+    content: "...";
+  }
+}
+
+.order-invoice__add {
+  flex-grow: 1;
+  position: relative;
+}
+
+.order-invoice__add span {
+  position: absolute;
+  left: 16px;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+[data-order-invoice-file] {
+  display: none;
+}
+
+.order-invoice__add[data-order-invoice-loading]::after {
+  content: "";
+  animation: dots 1.5s linear infinite;
+  display: block;
+  width: 15px;
+  flex-shrink: 0;
+  text-align: left;
+  margin-right: -10px;
+}
+
+.order-invoice__remove {
+}
