--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -575,7 +575,7 @@
     &:hover::after {
       opacity: 0;
     }
-    &.swiper-slide-active::after {
+    &.swiper-slide-thumb-active::after {
       opacity: 0;
     }
   }
