--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -109,20 +109,24 @@
 
 .product-gallery__close {
   display: none;
-  width: 48px;
-  height: 48px;
+  width: 46px;
+  height: 46px;
   position: absolute;
   top: 12px;
   right: 12px;
-  background: transparent;
   z-index: 2;
   border: 0;
   padding: 0;
   cursor: pointer;
+  color: #fff;
+  background: #0003;
+  &:hover {
+    background-color: #0000004d;
+  }
   &::before,
   &::after {
     content: '';
-    width: 40%;
+    width: 50%;
     height: 2px;
     background: currentColor;
     position: absolute;
@@ -148,8 +152,8 @@
   min-width: 0;
   position: relative;
   overflow: hidden;
-  background: #f4f4f4;
-  border: 4px solid #f4f4f4;
+  // background: #f4f4f4;
+  // border: 4px solid #f4f4f4;
   box-sizing: border-box;
   display: flex;
   [data-product-gallery-fullscreen] & {
@@ -199,18 +203,17 @@
   @include --max-lg {
     --swiper-navigation-sides-offset: 0;
   }
-  @include --max-md {
-    --swiper-navigation-size: 32px;
-    // --swiper-navigation-top-offset: 86px;
-    .swiper-button-prev,
-    .swiper-button-next {
-      color: #616161;
-      background-color: rgba(255, 255, 255, 0.5);
-      &:hover {
-        background: #fff;
-      }
-    }
-  }
+  // @include --max-md {
+  //   --swiper-navigation-size: 32px;
+  //   .swiper-button-prev,
+  //   .swiper-button-next {
+  //     color: #616161;
+  //     background-color: rgba(255, 255, 255, 0.5);
+  //     &:hover {
+  //       background: #fff;
+  //     }
+  //   }
+  // }
 }
 
 .product-gallery__thumbs {
