--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -523,9 +523,17 @@
 
 .home-carousel-thumbs__container {
   display: flex;
+  touch-action: pan-x pinch-zoom;
+  margin-top: calc(10px * -1);
+  height: calc(10px + 96px);
+  flex-direction: column;
 }
 
 .home-carousel-thumbs__slide {
+  transform: translate3d(0, 0, 0);
+  flex: 0 0 100%;
+  min-height: 0;
+  padding-top: 10px;
   img {
     height: 100%;
     width: 100%;
@@ -551,6 +559,19 @@
   color: #616161;
   left: 12px;
   right: auto;
+  border: none;
+}
+
+.home-carousel-main__prev::before {
+  content: '';
+  width: 12px;
+  height: 12px;
+  border-left: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: rotate(45deg) translate(-50%, -50%);
 }
 
 .home-carousel-main__next {
@@ -571,6 +592,19 @@
   color: #616161;
   right: 12px;
   left: auto;
+  border: none;
+}
+
+.home-carousel-main__next::before {
+  content: '';
+  width: 12px;
+  height: 12px;
+  border-right: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: rotate(-45deg) translate(-50%, -50%);
 }
 
 .home-slider {
