--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -504,29 +504,25 @@
 
 .home-carousel-thumbs {
   --carousel-gap: 12px;
-  --carousel-columns: 4;
+  --carousel-rows: 3;
 
   grid-area: thumbs;
   position: relative;
   min-height: 0;
   min-width: 0;
-
-  @include --max-md {
-    --carousel-columns: 3;
-    --carousel-gap: 8px;
-  }
 }
 
 .home-carousel-thumbs__viewport {
   overflow: hidden;
+  height: 100%;
 }
 
 .home-carousel-thumbs__container {
   display: flex;
   touch-action: pan-x pinch-zoom;
-  margin-top: calc(10px * -1);
-  height: calc(10px + 96px);
+  height: calc(100% / var(--carousel-rows));
   flex-direction: column;
+  gap: var(--carousel-gap);
 }
 
 .home-carousel-thumbs__slide {
@@ -534,10 +530,25 @@
   flex: 0 0 100%;
   min-height: 0;
   padding-top: 10px;
+  position: relative;
   img {
     height: 100%;
     width: 100%;
     object-fit: cover;
+  }
+  &::after {
+    content: "";
+    opacity: .3;
+    background: #e0e0e0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+  &.embla-thumbs__slide--selected::after {
+    opacity: 0;
   }
 }
 
