--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -520,16 +520,15 @@
 .home-carousel-thumbs__container {
   display: flex;
   touch-action: pan-x pinch-zoom;
-  height: calc(100% / var(--carousel-rows));
+  height: 100%;
   flex-direction: column;
   gap: var(--carousel-gap);
 }
 
 .home-carousel-thumbs__slide {
   transform: translate3d(0, 0, 0);
-  flex: 0 0 100%;
+  flex: 0 0 calc(100% / var(--carousel-rows));
   min-height: 0;
-  padding-top: 10px;
   position: relative;
   img {
     height: 100%;
