--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -534,6 +534,9 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    left: 0;
+    top: 0;
+    position: absolute;
   }
   &::after {
     content: "";
