--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -503,7 +503,7 @@
 }
 
 .home-carousel-thumbs {
-  --carousel-gap: 12px;
+  --carousel-gap: 0;
   --carousel-rows: 3;
 
   grid-area: thumbs;
@@ -573,18 +573,22 @@
   left: 12px;
   right: auto;
   border: none;
+  &:hover {
+    color: #000;
+    background-color: #ffffffb3;
+    box-shadow: 1.113px 7.922px 9px #00192926;
+  }
 }
 
 .home-carousel-main__prev::before {
   content: '';
   width: 12px;
   height: 12px;
-  border-left: 1px solid currentColor;
-  border-bottom: 1px solid currentColor;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: rotate(45deg) translate(-50%, -50%);
+  border-left: 2px solid currentColor;
+  border-bottom: 2px solid currentColor;
+  display: block;
+  transform: rotate(45deg) translateX(0px);
+  margin-left: 4px;
 }
 
 .home-carousel-main__next {
@@ -606,18 +610,22 @@
   right: 12px;
   left: auto;
   border: none;
+  &:hover {
+    color: #000;
+    background-color: #ffffffb3;
+    box-shadow: 1.113px 7.922px 9px #00192926;
+  }
 }
 
 .home-carousel-main__next::before {
   content: '';
   width: 12px;
   height: 12px;
-  border-right: 1px solid currentColor;
-  border-bottom: 1px solid currentColor;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: rotate(-45deg) translate(-50%, -50%);
+  border-right: 2px solid currentColor;
+  border-bottom: 2px solid currentColor;
+  display: block;
+  transform: rotate(-45deg) translateX(0px);
+  margin-left: -4px;
 }
 
 .home-slider {
