--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -558,7 +558,7 @@
 
 .home-carousel-thumbs__slide {
   transform: translate3d(0, 0, 0);
-  flex: 0 0 calc(100% / var(--carousel-rows));
+  flex: 0 0 calc(100% / var(--carousel-rows) - (var(--carousel-gap) * (var(--carousel-rows) - 1) / var(--carousel-rows)));
   min-height: 0;
   position: relative;
   margin: calc(var(--carousel-gap) / 2) 0;
