--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -85,9 +85,6 @@
   @include --max-lg {
     top: 101px;
   }
-  // @include --max-md {
-  //   display: none;
-  // }
 }
 
 .product-gallery {
@@ -145,78 +142,75 @@
   }
 }
 
-.product-gallery__main {
-  --swiper-navigation-size: 46px;
-  --swiper-navigation-sides-offset: 20px;
+.product-gallery-main {
+  --carousel-gap: 24px;
+  --carousel-columns: 1;
+
   min-height: 0;
   min-width: 0;
   position: relative;
   overflow: hidden;
-  // background: #f4f4f4;
-  // border: 4px solid #f4f4f4;
   box-sizing: border-box;
   display: flex;
   [data-product-gallery-fullscreen] & {
     flex-grow: 1;
   }
-  .swiper-container {
-    width: 100%;
-  }
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: var(--swiper-navigation-size);
-    border-radius: 50%;
-    box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
-    background-color: rgba(0, 0, 0, 0.2);
-    filter: none;
-    color: #fff;
-    transition: 0.3s ease;
-    &:hover {
-      filter: none;
-      box-shadow: 1px 8px 9px 0px rgba(0, 25, 41, 0.15);
-      background-color: rgba(0, 0, 0, 0.3);
-    }
-    &::after {
-      font-size: calc(var(--swiper-navigation-size) / 2);
-    }
-  }
-  .swiper-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    aspect-ratio: 10/8;
-    img {
-      display: block;
-      max-width: 100%;
-      max-height: 100%;
-      width: auto;
-      height: auto;
-      user-select: none;
-    }
-  }
-  @include --max-xl {
-    .swiper-slide {
-      aspect-ratio: 10 / 10;
-    }
-  }
-  @include --max-lg {
-    --swiper-navigation-sides-offset: 0;
-  }
-  // @include --max-md {
-  //   --swiper-navigation-size: 32px;
-  //   .swiper-button-prev,
-  //   .swiper-button-next {
-  //     color: #616161;
-  //     background-color: rgba(255, 255, 255, 0.5);
-  //     &:hover {
-  //       background: #fff;
-  //     }
-  //   }
-  // }
 }
 
-.product-gallery__thumbs {
+.product-gallery-main__viewport {
+  overflow: hidden;
+}
+
+.product-gallery-main__container {
+  display: flex;
+  grid-column-gap: var(--carousel-gap);
+}
+
+.product-gallery-main__slide {
+  flex: 0 0 calc(100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) / var(--carousel-columns));
+  min-width: 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  aspect-ratio: 10/8;
+  img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    user-select: none;
+  }
+  @include --max-xl {
+    aspect-ratio: 10 / 10;
+  }
+}
+
+.product-gallery-main__prev,
+.product-gallery-main__next {
+  width: var(--swiper-navigation-size);
+  border-radius: 50%;
+  box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
+  background-color: rgba(0, 0, 0, 0.2);
+  filter: none;
+  color: #fff;
+  transition: 0.3s ease;
+  &:hover {
+    filter: none;
+    box-shadow: 1px 8px 9px 0px rgba(0, 25, 41, 0.15);
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  &::after {
+    font-size: calc(var(--swiper-navigation-size) / 2);
+  }
+}
+
+.product-gallery-thumbs {
+  --carousel-gap: 12px;
+  --carousel-columns: 5;
+
   min-height: 0;
   min-width: 0;
   position: relative;
@@ -227,53 +221,62 @@
     min-height: 80px;
   }
 
-  .swiper-slide {
-    border: 1px solid #e3e3e3;
-    box-sizing: border-box;
-    position: relative;
-    background: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    aspect-ratio: 1 / 1;
-    width: calc(20% - 10px);
+  // .swiper-slide:hover {
+  //   img {
+  //     opacity: 1;
+  //   }
+  // }
 
-    [data-product-gallery-fullscreen] & {
-      width: 80px;
-    }
+  // .swiper-slide-thumb-active {
+  //   border-color: #0599bb;
+  //   box-shadow: inset 0 0 0 1px #0599bb;
 
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      user-select: none;
-      opacity: 0.6;
-    }
+  //   img {
+  //     opacity: 1;
+  //   }
+  // }
+}
 
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-    }
+.product-gallery-thumbs__viewport {
+  overflow: hidden;
+}
+
+.product-gallery-thumbs__container {
+  display: flex;
+  grid-column-gap: var(--carousel-gap);
+}
+
+.home-carousel-thumbs__slide {
+  border: 1px solid #e3e3e3;
+  box-sizing: border-box;
+  position: relative;
+  background: #f4f4f4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1 / 1;
+  width: calc(20% - 10px);
+
+  [data-product-gallery-fullscreen] & {
+    width: 80px;
   }
 
-  .swiper-slide:hover {
-    img {
-      opacity: 1;
-    }
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    user-select: none;
+    opacity: 0.6;
   }
 
-  .swiper-slide-thumb-active {
-    border-color: #0599bb;
-    box-shadow: inset 0 0 0 1px #0599bb;
-
-    img {
-      opacity: 1;
-    }
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
   }
 }
 
