--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -190,20 +190,56 @@
 
 .product-gallery-main__prev,
 .product-gallery-main__next {
-  width: var(--swiper-navigation-size);
+  position: absolute;
+  top: 50%;
+  height: 46px;
+  margin-top: calc(0px - (46px / 2));
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 46px;
   border-radius: 50%;
-  box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
-  background-color: rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 9px #00192914;
+  background-color: #0003;
   filter: none;
   color: #fff;
-  transition: 0.3s ease;
+  transition: .3s ease;
   &:hover {
     filter: none;
     box-shadow: 1px 8px 9px 0px rgba(0, 25, 41, 0.15);
     background-color: rgba(0, 0, 0, 0.3);
   }
-  &::after {
-    font-size: calc(var(--swiper-navigation-size) / 2);
+}
+
+.product-gallery-main__prev {
+  left: 20px;
+  right: auto;
+  &::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border-left: 2px solid currentColor;
+    border-bottom: 2px solid currentColor;
+    display: block;
+    transform: rotate(45deg) translateX(0px);
+    margin-left: 4px;
+  }
+}
+
+.product-gallery-main__next {
+  right: 20px;
+  left: auto;
+  &::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border-right: 2px solid currentColor;
+    border-bottom: 2px solid currentColor;
+    display: block;
+    transform: rotate(-45deg) translateX(0px);
+    margin-left: -4px;
   }
 }
 
